[package]
name = "rog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
unix-named-pipe = "0.2.0"
ctrlc = { version = "3.4.2", features = ["termination"] }
bat = "0.24.0"
inotify = "0.10.2"
ansi_term = "0.12.1"
regex = "1.10.2"
termsize = "0.1"

[profile.release]
lto = true
strip = true
